[gd_scene load_steps=3 format=3 uid="uid://cikt71588qjuh"]

[ext_resource type="Script" path="res://multiplayer_controller.gd" id="1_ptvis"]
[ext_resource type="Texture2D" uid="uid://dpgrf00g1vp1s" path="res://icon.svg" id="2_4eu8j"]

[node name="MultiplayerController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ptvis")

[node name="Username" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -510.0
offset_top = -256.0
offset_right = -160.0
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 2

[node name="DisplayNameLabel" type="Label" parent="Username"]
layout_mode = 2
text = "Name:"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Username"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -508.0
offset_top = -175.0
offset_right = -204.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Join"

[node name="StartGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Start"

[node name="LobbyPlayers" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 635.0
offset_top = 108.0
offset_right = 675.0
offset_bottom = 148.0

[node name="Player1" type="TextureRect" parent="LobbyPlayers"]
self_modulate = Color(0.32549, 0.32549, 0.32549, 1)
custom_minimum_size = Vector2(350, 55)
layout_mode = 2
texture = ExtResource("2_4eu8j")

[node name="Player1Name" type="Label" parent="LobbyPlayers/Player1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Waiting for players"

[node name="Player2" type="TextureRect" parent="LobbyPlayers"]
self_modulate = Color(0.32549, 0.32549, 0.32549, 1)
custom_minimum_size = Vector2(350, 55)
layout_mode = 2
texture = ExtResource("2_4eu8j")

[node name="Player2Name" type="Label" parent="LobbyPlayers/Player2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Waiting for players"

[connection signal="button_down" from="VBoxContainer/HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="VBoxContainer/JoinButton" to="." method="_on_join_button_button_down"]
[connection signal="button_down" from="VBoxContainer/StartGame" to="." method="_on_start_game_button_down"]
